--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello, world</h1>
     <p>Call me Ishmael.</p>
+    <a href="about.html">About this project</a>
     <img src="images/breaching_whale.jpg" alt="">
 </body>
 </html>
